--- a/helm/trading-system/templates/configmap-grafana-dashboards.yaml
+++ b/helm/trading-system/templates/configmap-grafana-dashboards.yaml
@@ -23,7 +23,7 @@ data:
             "targets": [
               {
                 "expr": "up{job=\"trading-system\"}",
-                "legendFormat": "{{ pod }}"
+                "legendFormat": "{{`{{ pod }}`}}"
               }
             ]
           },
@@ -45,7 +45,7 @@ data:
             "targets": [
               {
                 "expr": "tpu_utilization{job=\"trading-system\"}",
-                "legendFormat": "{{ pod }}"
+                "legendFormat": "{{`{{ pod }}`}}"
               }
             ]
           },
@@ -56,7 +56,7 @@ data:
             "targets": [
               {
                 "expr": "rate(trading_signals_total{job=\"trading-system\"}[5m])",
-                "legendFormat": "{{ agent }}"
+                "legendFormat": "{{`{{ agent }}`}}"
               }
             ]
           },
