--- a/helm/trading-system/templates/service-monitor.yaml
+++ b/helm/trading-system/templates/service-monitor.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.monitoring.enabled .Values.monitoring.prometheus.enabled }}
+{{- if and .Values.monitoring.enabled .Values.monitoring.prometheus.enabled (lookup "apiextensions.k8s.io/v1" "CustomResourceDefinition" "" "servicemonitors.monitoring.coreos.com") (lookup "apiextensions.k8s.io/v1" "CustomResourceDefinition" "" "prometheusrules.monitoring.coreos.com") }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
