Disable Prometheus monitoring until CRDs are installed
- Set prometheus.enabled: false to avoid CRD dependency issues
- Grafana dashboards remain enabled for future monitoring setup
- Allows deployment to proceed without Prometheus Operator

--- a/helm/trading-system/values.yaml
+++ b/helm/trading-system/values.yaml
@@ -502,7 +502,7 @@ hpa:
 monitoring:
   enabled: true
   prometheus:
-    enabled: true
+    enabled: false  # Disabled until Prometheus Operator CRDs are installed
     scrapeInterval: 15s
     evaluationInterval: 15s
     retention: 30d
